# adaptible

./: CNAME  README.md  pyproject.toml
adaptible/: __init__.py  local.py
adaptible/_src/: __init__.py  _api.py  _classes.py  _llm.py  _server.py  db.py
adaptible/_src/autonomous/: README.md  __init__.py  __main__.py  node.py
adaptible/_src/autonomous/logs/: 20251208.txt
adaptible/_src/dev/: README.md  test_loop_detection.py  training_bugs_test.py
adaptible/_src/eval/: README.md  __init__.py  __main__.py  dataset.py  harness.py  meta.py
adaptible/_src/libs/: __init__.py  revise.py  revise_test.py
adaptible/_src/local/: README.md  __init__.py  __main__.py  _server.py
adaptible/_src/revise/: __init__.py  revise.py  revise_test.py
adaptible/_src/static/: README.md  crop.sh  index.html
adaptible/_src/tests/: integration_test.py  llm_test.py  server_test.py
adaptible/_src/tests/artifacts/: adaptible_eval_report.html
adaptible/_src/tests/dev/: training_bugs_test.py
adaptible/_src/tests/eval/: __init__.py  __main__.py  dataset.py  harness.py  (+2 more)
adaptible/eval/: __init__.py  __main__.py
adaptible/tests/: api_test.py  classes_test.py  integration_test.py  llm_test.py  local_test.py  ls_models.ipynb
adaptible/tests/artifacts/: adaptible_test_report.html  training_bugs_test.txt
examples/: online_learning_demo.py  server_demo.py
notebooks/: explore_experiments.ipynb
outputs/autonomous/: state.json
outputs/meta/: analysis_report.md  meta_experiment.html  meta_experiment.json
scripts/: explore_db.py  run_meta_experiment.py
tests/: llm_test.py
