[project]
name = "adaptible"
version = "1.0.0a1"
description = "Stateful LLM serving instances that self-reflect and learn from their mistakes during periods of low server utilization."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py",
    "fastapi[all]",
    "immutabledict",
    "lm-eval",
    "mlx-lm",
    "mlx",
    "optax",
    "torch",
    "tqdm",
    "transformers",
    "uvicorn[standard]",
    "vizible@git+https://github.com/ible-ai/vizible",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adaptible"]

[tool.hatch.metadata]
allow-direct-references = true